--- a/src/components/Breadcrumbs.astro
+++ b/src/components/Breadcrumbs.astro
@@ -15,7 +15,7 @@ breadcrumbList[0] === "posts" &&
 <nav class="breadcrumb" aria-label="breadcrumb">
   <ul>
     <li>
-      <a href="/">Home</a>
+      <a href="/">Accueil</a>
       <span aria-hidden="true">&#62;</span>
     </li>
     {
@@ -43,10 +43,10 @@ breadcrumbList[0] === "posts" &&
 
 <style>
   .breadcrumb {
-    @apply mx-auto mt-8 mb-1 w-full max-w-3xl px-4;
+    @apply mx-auto mb-4 mt-8 w-full max-w-3xl px-4;
   }
   .breadcrumb ul li {
-    @apply inline;
+    @apply inline text-sm;
   }
   .breadcrumb ul li a {
     @apply capitalize opacity-70;
