--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,6 @@
 ---
 import Hr from "./Hr.astro";
+import LinkButton from "./LinkButton.astro";
 import Socials from "./Socials.astro";
 
 const currentYear = new Date().getFullYear();
@@ -16,16 +17,32 @@ const { noMarginTop = false } = Astro.props;
   <div class="footer-wrapper">
     <Socials centered />
     <div class="copyright-wrapper">
-      <span>Copyright &#169; {currentYear}</span>
+      <span>&#169; Oury</span>
       <span class="separator">&nbsp;|&nbsp;</span>
-      <span>All rights reserved.</span>
+      <span>
+        Thanks to
+        <LinkButton
+          href="https://satnaing.dev/"
+          isExternal
+          className="footer-link"
+        >
+          Sat Naing
+        </LinkButton>
+        for the
+        <LinkButton
+          href="https://github.com/satnaing/astro-paper/"
+          className="footer-link"
+        >
+          AstroPaper theme
+        </LinkButton>
+      </span>
     </div>
   </div>
 </footer>
 
 <style>
   footer {
-    @apply w-full;
+    @apply w-full text-sm;
   }
   .footer-wrapper {
     @apply flex flex-col items-center justify-between py-6 sm:flex-row-reverse sm:py-4;
@@ -41,5 +58,8 @@ const { noMarginTop = false } = Astro.props;
   }
   .separator {
     @apply hidden sm:inline;
+  }
+  .footer-link {
+    @apply decoration-dashed hover:underline;
   }
 </style>
