--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -44,7 +44,7 @@ const tagPosts = getPostsByTag(posts, tag);
     <ul>
       {
         tagPosts.map(({ data }) => (
-          <Card href={`/posts/${slugify(data)}`} frontmatter={data} />
+          <Card href={`/articles/${slugify(data)}`} frontmatter={data} />
         ))
       }
     </ul>
