--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -5,18 +5,18 @@
 @layer base {
   :root,
   html[data-theme="light"] {
-    --color-fill: 251, 254, 251;
-    --color-text-base: 40, 39, 40;
-    --color-accent: 0, 108, 172;
-    --color-card: 230, 230, 230;
-    --color-card-muted: 205, 205, 205;
-    --color-border: 236, 233, 233;
+    --color-fill: 246, 238, 225;
+    --color-text-base: 1, 44, 86;
+    --color-accent: 225, 74, 57;
+    --color-card: 217, 209, 195;
+    --color-card-muted: 239, 216, 176;
+    --color-border: 220, 152, 145;
   }
   html[data-theme="dark"] {
-    --color-fill: 33, 39, 55;
+    --color-fill: 16, 23, 42;
     --color-text-base: 234, 237, 243;
     --color-accent: 255, 107, 1;
-    --color-card: 52, 63, 96;
+    --color-card: 27, 39, 70;
     --color-card-muted: 138, 51, 2;
     --color-border: 171, 75, 8;
   }
@@ -29,7 +29,7 @@
     display: block;
   }
   body {
-    @apply flex min-h-screen flex-col bg-skin-fill font-mono text-skin-base 
+    @apply flex min-h-screen flex-col bg-skin-fill font-mono text-lg text-skin-base
     selection:bg-skin-accent selection:bg-opacity-70 selection:text-skin-inverted;
   }
   section,
@@ -48,6 +48,7 @@
     stroke-current stroke-2 opacity-90 group-hover:fill-transparent 
     sm:scale-110;
   }
+
   .prose {
     @apply prose-headings:!mb-3 prose-headings:!text-skin-base 
     prose-h3:italic prose-p:!text-skin-base 
@@ -69,6 +70,7 @@
     prose-img:!mt-2 prose-img:border-2 
     prose-img:border-skin-line prose-hr:!border-skin-line;
   }
+
   .prose a {
     @apply hover:!text-skin-accent;
   }
