--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -41,7 +41,7 @@ const ogUrl = new URL(ogImage ? ogImage : `${title}.png`, Astro.url.origin)
     <article
       id="article"
       role="article"
-      class="prose prose-lg mx-auto mt-8 max-w-3xl"
+      class="prose mx-auto mt-8 max-w-3xl md:prose-lg"
     >
       <Content />
     </article>
