--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -29,8 +29,8 @@
     display: block;
   }
   body {
-    @apply flex min-h-screen flex-col bg-skin-fill font-mono text-lg text-skin-base
-    selection:bg-skin-accent selection:bg-opacity-70 selection:text-skin-inverted;
+    @apply flex min-h-screen flex-col bg-skin-fill font-mono text-base text-skin-base selection:bg-skin-accent
+    selection:bg-opacity-70 selection:text-skin-inverted lg:text-lg;
   }
   section,
   footer {
