--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,6 +16,8 @@ const posts = await getCollection("blog");
 const sortedPosts = getSortedPosts(posts);
 
 const socialCount = SOCIALS.filter(social => social.active).length;
+
+const maxRecentToDisplay = 5;
 ---
 
 <Layout>
@@ -63,7 +65,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
         {
           sortedPosts.map(
             ({ data }, index) =>
-              index < 4 && (
+              index < maxRecentToDisplay - 1 && (
                 <Card
                   href={`/articles/${slugify(data)}`}
                   frontmatter={data}
@@ -73,19 +75,21 @@ const socialCount = SOCIALS.filter(social => social.active).length;
           )
         }
       </ul>
-      <div class="all-posts-btn-wrapper">
-        <LinkButton
-          href="/articles"
-          className="p-3 border-2 border-dashed border-transparent hover:border-skin-accent transition-colors"
-        >
-          Tous les articles
-          <svg xmlns="http://www.w3.org/2000/svg"
-            ><path
-              d="m11.293 17.293 1.414 1.414L19.414 12l-6.707-6.707-1.414 1.414L15.586 11H6v2h9.586z"
-            ></path>
-          </svg>
-        </LinkButton>
-      </div>
+      {
+        sortedPosts.length > maxRecentToDisplay && (
+          <div class="all-posts-btn-wrapper">
+            <LinkButton
+              href="/articles"
+              className="border-2 border-dashed border-transparent p-3 transition-colors hover:border-skin-accent"
+            >
+              Tous les articles
+              <svg xmlns="http://www.w3.org/2000/svg">
+                <path d="m11.293 17.293 1.414 1.414L19.414 12l-6.707-6.707-1.414 1.414L15.586 11H6v2h9.586z" />
+              </svg>
+            </LinkButton>
+          </div>
+        )
+      }
     </section>
   </main>
 
