--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -30,7 +30,7 @@
   }
   body {
     @apply flex min-h-screen flex-col bg-skin-fill font-mono text-base text-skin-base selection:bg-skin-accent
-    selection:bg-opacity-70 selection:text-skin-inverted lg:text-lg;
+    selection:bg-opacity-70 selection:text-skin-inverted md:px-2 lg:px-0 lg:text-lg;
   }
   section,
   footer {
