--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -58,7 +58,7 @@ const ogUrl = new URL(ogImage ? ogImage : `${title}.png`, Astro.url.origin)
     @apply mx-auto w-full max-w-4xl px-4 pb-12;
   }
   .post-title {
-    @apply text-2xl font-semibold text-skin-accent;
+    @apply text-2xl font-semibold text-skin-accent md:text-3xl lg:text-4xl;
   }
   .tags-container {
     @apply my-8;
