post: new article on burnout

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -72,6 +72,9 @@ const { activeNav } = Astro.props;
             </a>
           </li>
           <li>
+            <a href="https://www.oury.dev" target="_blank"> Mon site</a>
+          </li>
+          <li>
             <LinkButton
               href="/search"
               className={`focus-outline p-3 sm:p-1 ${
