--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -6,7 +6,10 @@ import Footer from "@components/Footer.astro";
 import LinkButton from "@components/LinkButton.astro";
 ---
 
-<Layout title={`404 Not Found | ${SITE.title}`}>
+<Layout
+  title={`Erreur 404 - page introuvable | ${SITE.title}`}
+  description="Désolé, la page que vous recherchez n'est pas disponible sur le site."
+>
   <Header />
 
   <main id="main-content">
