--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import Card from "@components/Card";
 import Socials from "@components/Socials.astro";
 import getSortedPosts from "@utils/getSortedPosts";
 import slugify from "@utils/slugify";
-import { SOCIALS } from "@config";
+import { SITE, SOCIALS } from "@config";
 
 const posts = await getCollection("blog");
 
@@ -20,7 +20,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
 const maxRecentToDisplay = 5;
 ---
 
-<Layout>
+<Layout title={SITE.title}>
   <Header />
   <main id="main-content">
     <section id="hero">
